pod.yml
apiVersion: v1
kind: Pod
metadata: 
  name: short-app
  labels:
    components: frontend
spec:
  containers:
    - name: short-app
      image: antonlarichev/short-app
      ports: 
        - containerPort: 80
      resourses:
        limits:
          memory: "128mi"
          cpu: "500m"
